# GNSISBACKEND

./: .env.example  .env.template  .gitignore  ARCHITECTURE.md  Dockerfile  Dockerfile.sandbox  LICENSE  NOTICE  Procfile  README.md  pyproject.toml  railway.json
.claude/: settings.json
.github/workflows/: ci.yml
configs/: self_evolution.py  tool_calling_agent.py
docs/: auto_refill.md  billing.md  dashboard.md  deployment.md  litellm_metering.md  model_pricing.md  public_beta_execution.md  public_gateway.md  spending_limits.md  stripe_dashboard_setup.md  usage_ledger_integrity.md  virtual_keys.md  wallet_billing.md
examples/: gateway_chat_completion.py  retrieve_usage.py  run_self_evolution.py  run_tool_calling_agent.py
src/gnsis/: __about__.py  __init__.py  cli.py  config.py  runtime.py  smoke.py
src/gnsis/agent/: __init__.py  policy.py  tool_calling.py
src/gnsis/engines/: __init__.py  claude_agent.py  common.py  gnsis_native.py  openhands.py
src/gnsis/evolution/: __init__.py  loop.py  optimizer.py  task.py
src/gnsis/jobs/: __init__.py  models.py  state.py  store.py
src/gnsis/memory/: __init__.py  base.py  memory.py  simplemem.py
src/gnsis/models/: __init__.py  base.py  mock.py  openrouter.py  registry.py
src/gnsis/orchestration/: __init__.py  engine.py  models.py  pipeline.py  status.py  store.py
src/gnsis/persistence/: __init__.py  base.py
src/gnsis/resources/: __init__.py  resource.py  store.py
src/gnsis/service/: __init__.py  api.py  auth.py  auth_client.py  auto_refill.py  beta_credits.py  billing.py  branches.py  codememory.py  dashboard.py  db.py  github_app.py  installations.py  intelligence_lifecycle.py  limits.py  litellm_admin.py  model_catalog.py  orm.py  policy_store.py  pricing.py  public_gateway.py  rates.py  receipts.py  repository.py  runner.py  sandbox.py  settings.py  stripe_checkout.py  stripe_client.py  stripe_customers.py  stripe_webhook.py  tasks.py  ui.py  usage.py  usage_api.py  virtual_keys.py  wallet.py  webhooks.py  welcome_credits.py  workspace.py  (+1 more)
src/gnsis/service/executor/: __init__.py  api.py  approval.py  basecheckout.py  callbacks.py  cancel.py  ci.py  dispatch.py  gateway.py  github.py  installation.py  models.py  oidc.py  publish.py  reconcile.py  source.py  spec.py  store.py  tokens.py  validation.py
src/gnsis/tools/: __init__.py  base.py  builtin.py  registry.py  workspace.py
src/gnsis/tracer/: __init__.py  tracer.py
tests/: _authkit.py  test_agent.py  test_api_auth.py  test_auth_jwt.py  test_auto_refill.py  test_backend_hardening.py  test_beta_credits.py  test_billing_ledger.py  test_cli.py  test_codememory.py  test_config.py  test_dashboard_api.py  test_engine_gnsis_native.py  test_engines.py  test_evolution.py  test_executor.py  test_gateway_server_tools.py  test_genesis_keys.py  test_jobs.py  test_ledger_integrity.py  test_limits.py  test_memory_id_normalization.py  test_memory_provider.py  test_models_mock.py  test_models_openrouter.py  test_orchestration.py  test_persistence.py  test_policy_store.py  test_pricing.py  test_public_gateway.py  test_resources.py  test_run_intelligence.py  test_run_receipt.py  test_selection_controls.py  test_smoke.py  test_tools.py  test_tools_workspace.py  test_usage_metering.py  test_virtual_keys.py  test_wallet_billing.py  (+4 more)
tests/integration/: test_intelligence_lifecycle.py  test_service_integration.py
