[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gnsis"
description = "A stable, dogfoodable self-evolution runtime for tool-calling LLM agents."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Aubin Cooper", email = "aubincorinaldiecooper@gmail.com" }]
keywords = ["agents", "llm", "self-evolution", "tool-calling", "openrouter"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "celery[redis]>=5.3",
    "SQLAlchemy>=2.0",
    "psycopg[binary]>=3.1",
    "pydantic>=2",
    "PyJWT[crypto]>=2.8",
]
dynamic = ["version"]

[project.optional-dependencies]
# Test-only tools stay in the dev extra; backend runtime imports are declared in
# the main project dependencies so editable installs work in CI and production.
dev = ["pytest>=7", "httpx>=0.27"]
# Backwards-compatible deployment extra for optional service integrations not
# imported by the backend package at test import time.
service = ["claude-agent-sdk>=0.1"]

[project.scripts]
gnsis = "gnsis.cli:main"
gnsis-migrate = "gnsis.service.db:init_db"

[project.urls]
Homepage = "https://github.com/aubincorinaldiecooper-bit/gnsis"
"Inspired by" = "https://github.com/DVampire/Autogenesis"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "gnsis.__about__.__version__" }
