[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gnsis"
description = "GNSIS backend: a FastAPI + Celery service orchestrating sandboxed coding-agent runs (executor dispatch, OpenAI-compatible model gateway, metering/billing, repository memory), built on the GNSIS self-evolution runtime."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Aubin Cooper", email = "aubincorinaldiecooper@gmail.com" }]
keywords = ["agents", "llm", "self-evolution", "tool-calling", "openrouter"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# Core is standard-library only — no install-time dependencies.
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
# Test toolchain + the runtime libraries the test suite imports. This is what CI
# installs (`pip install -e ".[dev]"`); it deliberately excludes claude-agent-sdk
# (no test imports it — the claude engine loads it lazily) so the matrix stays on
# Python 3.9-3.13. The GNSIS core itself remains standard-library only.
dev = [
    "pytest>=7",
    "httpx>=0.27",
    "fastapi>=0.110",
    "sqlalchemy>=2.0",
    "pydantic>=2",
    "PyJWT[crypto]>=2.8",
    "cryptography>=42",
    "celery[redis]>=5.3",
]
# The Railway deployment surface (FastAPI API + Celery worker + Postgres).
# The GNSIS core stays standard-library only; these are needed only to run the
# service. Install with: pip install -e ".[service]"
service = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "celery[redis]>=5.3",
    "redis>=5.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "pydantic>=2",
    "PyJWT[crypto]>=2.8",
    "cryptography>=42",
    "claude-agent-sdk>=0.1",
]

[project.scripts]
gnsis = "gnsis.cli:main"
gnsis-migrate = "gnsis.service.db:init_db"

[project.urls]
Homepage = "https://github.com/aubincorinaldiecooper-bit/gnsis"
"Inspired by" = "https://github.com/DVampire/Autogenesis"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "gnsis.__about__.__version__" }

[tool.ruff]
# Minimal, high-signal baseline (there was no linter before). Currently clean.
# Broaden `select` over time (e.g. add "I" for import sorting, "UP" for pyupgrade)
# once the team is ready to absorb the churn.
target-version = "py39"
line-length = 100

[tool.ruff.lint]
# Pyflakes (unused imports/vars, undefined names) + syntax errors only.
select = ["E9", "F"]
